<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="nav_learn" type="id" />
    <item name="nav_practice" type="id" />
    <item name="nav_send" type="id" />
    <item name="nav_receive" type="id" />
    <item name="nav_tree" type="id" />
    <item name="nav_hardware" type="id" />
    <item name="nav_settings" type="id" />
    <item name="nav_keyer" type="id" />
</resources>
